# learnopengl

./: Cargo.toml  Dockerfile
assets/: shader.frag  shader.vert
assets/shaders/: cube.frag  skybox.frag  skybox.vert
crates/camera/: Cargo.toml
crates/camera/src/: lib.rs
crates/opengl/: Cargo.toml
crates/opengl-sys/: Cargo.toml
crates/opengl-sys/src/: lib.rs
crates/opengl/src/: buffer.rs  error.rs  lib.rs  mesh.rs  shader.rs  texture.rs
crates/playground/: Cargo.toml
crates/tutorials/: Cargo.toml
crates/tutorials/part-1-getting-started/: Cargo.toml
crates/tutorials/part-2-lighting/: Cargo.toml
crates/tutorials/part-3-model-loading/: Cargo.toml
crates/tutorials/part-3-model-loading/src/: main.rs
crates/tutorials/part-4-advanced-opengl/: Cargo.toml
crates/winman/: Cargo.toml
crates/winman/src/: lib.rs
src/: assets.rs  camera.rs  cube.rs  main.rs  opengl.rs  shader.rs  skybox.rs  window.rs
