[package]
name = "learnopengl-tutorials"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
nalgebra-glm = "0.18"

opengl-sys = { path= "../opengl-sys" }
opengl = { path="../opengl" }
winman = { path="../winman" }
camera = { path="../camera" }

#[dependencies]
#anyhow = "1.0"
#thiserror = "1.0"
#env_logger = "-0.10"
#log = "0.4"
#
#assimp = "0.3"
#assimp-sys = "0.3"
#nalgebra-glm = "0.17"
#gl = "0.14"
#sdl2 = { version = "0.35", features = ["bundled", "static-link"] }
#image = "0.24"
#rand = "0.8"