[package]
name = "tutorials-part-3"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
nalgebra-glm = "0.18"
russimp = "2.0"
itertools = "0.10.5"

opengl-sys = { path= "../../opengl-sys" }
opengl = { path="../../opengl" }
winman = { path="../../winman" }
camera = { path="../../camera" }
